--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "soketio",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app/src/server",
@@ -13,6 +16,7 @@
   "dependencies": {
     "bad-words": "^3.0.4",
     "dateformat": "^4.5.0",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
     "socket.io": "^4.8.1"
